=== 0.3 (ongoing) ===

=== 0.2 ===

* Bugfixes

=== 0.1 ===

Initial commit